--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A Training Framework for Stable Baselines3 Reinforcement Learning
 readme = "README.md"
 authors = [{ name = "Antonin Raffin", email = "antonin.raffin@dlr.de" }]
 license = { text = "MIT" }
-requires-python = ">=3.10"
+requires-python = ">=3.10, <3.13"
 keywords = [
     "reinforcement-learning-algorithms",
     "reinforcement-learning",
@@ -45,6 +45,8 @@ dependencies = [
     "pytablewriter>=1.2.1",
     "seaborn>=0.13.2",
     "stable-baselines3[docs,extra,tests]>=2.6.0,<3.0",
+    "tensorboard-plugin-profile>=2.19.1",
+    "tensorflow>=2.19.0",
     "wandb>=0.19.8",
 ]
 
