greate speedup by using subproc vec envs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "pytablewriter>=1.2.1",
     "seaborn>=0.13.2",
     "stable-baselines3[docs,extra,tests]>=2.6.0,<3.0",
+    "tbparse>=0.0.9",
     "tensorflow>=2.19.0",
     "wandb>=0.19.8",
 ]
