run some exp with different numbers of vehicles and routes

--- a/hyperparams/ppo.yml
+++ b/hyperparams/ppo.yml
@@ -654,3 +654,7 @@ Mumford0Fix-v0:
 Mumford0FixRandomFreq-v0:
     <<: *ceder-default
     n_envs: 80
+
+Mandl-v0:
+    <<: *ceder-default
+    n_envs: 80
