--- a/hyperparams/ppo.yml
+++ b/hyperparams/ppo.yml
@@ -610,7 +610,7 @@ CederFix-v0: &ceder-default
     vf_coef: 0.5
     max_grad_norm: 0.5
     policy_kwargs: "dict(
-        features_extractor_class=rl_zoo3.custom_feature_extractor.MandlFeaturesExtractor,
+        features_extractor_class=rl_zoo3.custom_feature_extractor.SmallMandlFeaturesExtractor,
         features_extractor_kwargs=dict(features_dim=256),
         net_arch=dict(pi=[256, 256], vf=[256, 256]),
         activation_fn=nn.ReLU,
